# Sampling_Random_Permutations

./: CMakeLists.txt  LICENCE  README.md  bench_parse.sh  bench_plot.gp  bench_run.py  benchmark.c  benchmark_avx.c  benchmark_avx2.c  compare_AVX.c  temptest.c
djbsort/: djbsort.c  djbsort.h  djbsort_avx.c
include/: definitions.h  djbsort_sample.h  djbsort_sample_avx.h  fisher_yates.h  fisher_yates_AVX2.h  sendrier_AVX2.h  utils.h
include_old/: fisher_yates_natural_AVX2.h  fisher_yates_sendrier_AVX2.h
src/: api.h  common.c  common.h  common_fisher_yates.c  common_fisher_yates.h  definitions.h  djbsort_sample.c  djbsort_sample.h  djbsort_sample_avx.c  fisher_yates.c  fisher_yates.h  fisher_yates_AVX2.c  fisher_yates_bike.c  fisher_yates_natural.c  fisher_yates_natural.h  fisher_yates_natural_AVX2.c  fisher_yates_natural_AVX2.h  fisher_yates_sendrier.c  fisher_yates_sendrier.h  macros.h  sendrier_AVX2.c  sendrier_AVX2.h  utils.c  utils.h  verification.c  verification.h  verification_AVX2.c  verification_AVX2.h
src/AVX2/: definitions_AVX2.h  djbsort_sample_AVX2.c  djbsort_sample_AVX2.h  djbsort_sample_avx2.c  djbsort_sample_avx2.h  fisher_yates_natural_AVX2.c  fisher_yates_sendrier_AVX2.c  fisher_yates_sendrier_AVX2.h  verification_AVX2.c  verification_AVX2.h
src/composition/: composition_sorting.c  composition_sorting.h  composition_substitution.c  composition_substitution.h  djbsort_composition.c  djbsort_composition.h  sort_composition.c  standard_composition.c  standard_composition.h  standard_composition_ct.c
src/inversion/: djbsort_inversion.c  djbsort_inversion.h  inversion_substitution.c  inversion_substitution.h  inversion_substitution_ct.c  sort_inversion.c
src/lib/: hwy-vqsort_cwrapper.cpp
src/lib/hwy-vqsort/: highway.h  per_target.h  targets.cc  targets.h
src/lib/hwy-vqsort/algo/: copy-inl.h
src/lib/hwy-vqsort/ops/: arm_neon-inl.h  emu128-inl.h  ppc_vsx-inl.h  set_macros-inl.h  shared-inl.h  wasm_128-inl.h  x86_128-inl.h  x86_256-inl.h  x86_512-inl.h
src/lib/hwy-vqsort/sort/: sorting_networks-inl.h  traits-inl.h  traits128-inl.h  vqsort-inl.h  vqsort.cc  vqsort.h  vqsort_128a.cc  vqsort_128d.cc  vqsort_f32a.cc  vqsort_f32d.cc  vqsort_i16a.cc  vqsort_i32a.cc  vqsort_i32d.cc  vqsort_i64d.cc  vqsort_u16a.cc  vqsort_u32a.cc
src/permutation_sampling/: shuffle_sample.c  sort_sample.c  sort_sample_64.c
src/sampling/: djbsort_sample.c  djbsort_sample.h  fisher_yates.c  fisher_yates.h  fisher_yates_natural.c  fisher_yates_natural.h  fisher_yates_sendrier.c  fisher_yates_sendrier.h  shuffle_sample.c  sort_sample.c  sort_sample_64.c
src/sampling/AVX2/: definitions_AVX2.h  djbsort_sample_AVX2.c  djbsort_sample_AVX2.h  fisher_yates_natural_AVX2.c  fisher_yates_natural_AVX2.h  fisher_yates_sendrier_AVX2.c  fisher_yates_sendrier_AVX2.h
src/shuffling/: common_shuffle.h  fisher_yates_shuffle.c  modulo_index_sample.c  natural_shuffle.c  natural_shuffle_avx2.c  natural_uniform_index_sample.c  natural_uniform_index_sample_avx2_ct.c  natural_uniform_index_sample_ct.c  sandrier_shuffle.c  sendrier_shuffle.c  sendrier_shuffle_avx2.c  uniform_index_sample.c  uniform_index_sample_avx2_ct.c  uniform_index_sample_ct.c
src/sorting/: common_sort.h  djbsort_wrapper.c  generic_sort.h  vqsort_wrapper.c
src/uniform_sampling/: buffered_lemire_uniform_index_sample.c  buffered_uniform_index_sample_ct.c  common_uniform_index_sample.h  lemire_constants.h  natural_buffered_lemire_uniform_index_sample.c  natural_buffered_uniform_index_sample_ct.c  natural_lemire_uniform_index_sample.c  natural_uniform_index_sample_ct.c
src_old/: fisher_yates_bike.c  fisher_yates_natural.c  fisher_yates_natural_AVX2.c  fisher_yates_sendrier_AVX2.c
test/: CMakeLists.txt  benchmark_api.c  benchmark_sampling.c  benchmark_sampling_avx2.c  benchmark_uniform_sampling.c  benchmark_utils.c  benchmark_utils.h  dudect_api.c  kat_api.c  test_api.c  test_compatibility.c  test_inversion_composition.c  test_permutation_utils.c  test_permutation_utils.h  test_permutation_utils_AVX2.c  test_permutation_utils_AVX2.h  test_sampling.c  test_sort_api.c  test_sort_u32.c  test_sort_u64.c  test_utils.c  test_utils.h  test_vqsort.c  test_vqsort.cc
util/: hwy-vqsort-fix-includes.sh
